# qdetachabletabs

./: README.md  main.py  pyproject.toml
src/qdetachabletabs/: qdetachabletabbar.py  qdetachabletabwidget.py  utils.py
