[project]
name = "qdetachabletabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "qtpy>=2.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyqt6>=6.8.0",
]

# qtpy pyright-config
[tool.pyright.defineConstant]
PYQT5 = false
PYSIDE2 = false
PYQT6 = true
PYSIDE6 = false

# see also: pylint --generate-toml-config
[tool.pylint.main]
extension-pkg-whitelist = ["PyQt6"]
